[tool.poetry]
name = "requests-oauthlib-uma"
version = "0.1.0"
description = "UMA 2.0 session and client support for requests-oauthlib"
authors = ["Dave Sutherland <dave@alphalayer.ai>"]
readme = "README.md"
packages = [{include = "requests_oauthlib_uma"}]

[tool.poetry.dependencies]
python = "^3.9"
requests-oauthlib = "^2.0.0"
typing-extensions = "^4.12.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pre-commit = "^3.2.1"
pytest = "^8.2.2"
black = "^24.3"
isort = "^5.12.0"

[[tool.poetry.source]]
name = "alphalayer-publish"
url = "https://pkgs.dev.azure.com/alphalayerai/Packages/_packaging/Python/pypi/upload/"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
exclude = '''
/(
    \.git
    | __pycache__
    | \.venv
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
lines_between_sections = 1
line_length = 120
multi_line_output = 3
sections = ["FUTURE","STDLIB","THIRDPARTY","FIRSTPARTY","LOCALFOLDER"]

[tool.pytest.ini_options]
testpaths = ["tests"]
